--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -151,6 +151,8 @@
 
 \newcommand{\interps}[1]{\mathsf{Interps[ #1 ]}}
 
+\newcommand{\invert}[2]{\overline{#1}^{#2}}
+
 \newcommand{\invsof}[1]{\mathsf{Invs}[ #1 ]}
 
 \newcommand{\isind}{\mathsf{HasTy}}
@@ -162,6 +164,8 @@
 \newcommand{\ite}[3]{\cc{if}\ #1\ \cc{then}\ #2\ \cc{else}\ #3}
 
 \newcommand{\itectr}[3]{\mathsf{ITE}(#1, #2, #3)}
+
+\newcommand{\join}[1]{\bowtie_{#1}}
 
 \newcommand{\joinctr}{\bowtie}
 
