--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -199,6 +199,8 @@
 
 \newcommand{\pair}[2]{\cc{(} #1 \cc{,} #2 \cc{)} }
 
+\newcommand{\reltyof}{\sim}
+
 \newcommand{\renameclauses}[3]{\mathsf{Rename}[ #1, #2, #3 ]}
 
 \newcommand{\renamesub}[4]{\mathsf{Rename}[ #1, #2, #3, #4 ]}
