--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -131,6 +131,8 @@
 
 \newcommand{\idxdatapos}[1]{P_{#1}^D}
 
+\newcommand{\idxrefpreds}[1]{\mathsf{Ref}_{#1}}
+
 \newcommand{\idxvarpos}[1]{P_{#1}^X}
 
 \newcommand{\immsubders}[1]{\mathsf{ImmSubs}[ #1 ]}
